default/objects/NVMContactWorld__IncomingCallPoppingSettings__c/NVMContactWorld__IncomingCallPoppingSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings are no longer in use</description>
    <label>Deprecated</label>
</CustomObject>