default/objects/NVMContactWorld__IncomingCallPoppingSettings__c/fields/NVMContactWorld__AdditionalFields__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__AdditionalFields__c</fullName>
    <description>Name of additional field to show in the Log a Call Action.</description>
    <label>Additional Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>