default/objects/NVMContactWorld__IncomingCallPoppingSettings__c/fields/NVMContactWorld__HandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__HandlerClassName__c</fullName>
    <description>The Apex class name for the handler that implements the custom popping behaviour.</description>
    <label>Custom Behaviour Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>