default/objects/NVMContactWorld__IncomingCallPoppingSettings__c/fields/NVMContactWorld__SearchClassName__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__SearchClassName__c</fullName>
    <description>The Apex class name for the handler that implements the custom search algorithm.</description>
    <label>Search Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>