default/objects/NVMContactWorld__IncomingCallPoppingSettings__c/fields/NVMContactWorld__SelectPresentedClidClassName__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__SelectPresentedClidClassName__c</fullName>
    <description>Used to specify the name of the Apex Class that implements the Presented CLID query.</description>
    <label>Auto Presented CLID Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>