default/objects/NVMContactWorld__IncomingCallPoppingSettings__c/fields/NVMContactWorld__ShowNotesPanel__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__ShowNotesPanel__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables or disables the notes panel in the incoming call page.</description>
    <label>Show Notes Panel</label>
    <type>Checkbox</type>
</CustomField>